(gallery bug fix): Overflow of tags when more elements are loaded is fixed

--- a/packages/interface/src/components/Gallery/Gallery.module.css
+++ b/packages/interface/src/components/Gallery/Gallery.module.css
@@ -14,7 +14,7 @@
 
 .GalleryGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 30px;
   margin: 40px 0;
 }
